Further fixes to alignment of skills

--- a/assets/css/main-style.css
+++ b/assets/css/main-style.css
@@ -31,6 +31,7 @@
 #skillsProject {
     #padding: 50px 15px;
     text-align: left;
+    float: left;
     #background: #f2f2f5;
 }
 
@@ -292,11 +293,6 @@ p {
 
 .main-wrapper .experiences-section .item {
   margin-bottom: 20px;
-}
-
-.main-wrapper .experiences-section .item .skillsProject {
-    position: relative;
-    float: left;
 }
 
 .main-wrapper .upper-row {
